[project]
name = "backlive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.38",
    "yfinance>=0.2.52",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
backlive = "backlive.cli:cli"

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]
doc = [
    "mkdocs-material>=9.5.39",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.11.1",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml --junit-xml=junit.xml"

[tool.ruff]
line-length = 120
output-format = "concise"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "I",   # isort
]
lint.ignore = [
    "E501", # Line too long
]
